--- a/books.html
+++ b/books.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Affiliate Webpage</title>
+        <title>CertifiedFluency Recommended E-Books
+        </title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -23,16 +24,16 @@
         		<span class="icon-bar"></span>
         		<span class="icon-bar"></span>
       			</button>
-      			<a class="navbar-brand active" href="#">Brand</a>
+      			<a class="navbar-brand active" href="#">CertifiedFluency™</a>
       			
       			<div class="navbar-header down">
                         <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Shop By Category<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">Books</a></li>
-                                    <li><a href="electronics.html">Electronics</a></li>
-                                    <li><a href="toysAndKids.html">Toys and Kids Section</a></li>
-                                    <li><a href="computersAndLaptops.html">Cameras ans Accesories</a></li>
+                                    <li><a href="books.html">CertifiedFluency Recommended E-Books</a></li>
+                                    <li><a href="electronics.html">CertifiedFluency / Duolingo Complementary Curriculum</a></li>
+                                    <li><a href="toysAndKids.html">Resources</a></li>
+                                    <li><a href="computersAndLaptops.html">Featured Content Yes Boy</a></li>
                                     <li><a href="#">Computers and Laptops</a></li>
                                     <li><a href="homeEssentials.html">Home Essentials</a></li>
                                 </ul>
