--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Affiliate Webpage</title>
+        <title>CertifiedFluency | Free! Language Resources, Inspiration, Certifications, and Community.</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
