--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       			
       			<div class="navbar-header down">
                         <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Shop By Category<span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">Books</a></li>
-                                    <li><a href="electronics.html">Electronics</a></li>
-                                    <li><a href="toysAndKids.html">Toys and Kids Section</a></li>
-                                    <li><a href="#">Cameras ans Accesories</a></li>
-                                    <li><a href="computersAndLaptops.html">Computers and Laptops</a></li>
-                                    <li><a href="homeEssentials.html">Home Essentials</a></li>
+                                    <li><a href="books.html">Core Competencies Syllabus</a></li>
+                                    <li><a href="electronics.html">Online Certifications</a></li>
+                                    <li><a href="toysAndKids.html">E-Books</a></li>
+                                    <li><a href="#">Additional Resources</a></li>
+                                    <li><a href="computersAndLaptops.html">Sign up to receive ocasional, non-invasive reminders. </a></li>
+                                    <li><a href="homeEssentials.html">Product Reviews</a></li>
                                 </ul>
                         </li>
                 </div>
@@ -47,9 +47,9 @@
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="books.html">Books</a></li>
-                <li><a href="electronics.html">Electronics</a></li>
-                <li><a href="#" >Technology</a></li>
+                <li><a href="books.html">Core Competencies Syllabus</a></li>
+                <li><a href="electronics.html">Online Certifications</a></li>
+                <li><a href="technology.html" >Technology</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
                     <ul class="dropdown-menu shop">
