--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Affiliate Webpage</title>
+        <title>CertifiedFluent.com|Free Language Learning Resources, Courses, and Community </title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -33,7 +33,8 @@
                         <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">Core Competencies Syllabus</a></li>
+                                    <li><a href="
+                                        s.html">Core Competencies Syllabus</a></li>
                                     <li><a href="electronics.html">Online Certifications</a></li>
                                     <li><a href="toysAndKids.html">E-Books</a></li>
                                     <li><a href="#">Additional Resources</a></li>
