--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
               
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="books.html">Core Competencies Syllabus</a></li>
                 <li><a href="electronics.html">Online Certifications</a></li>
                 <li><a href="technology.html" >Technology</a></li>
