Update and rename books.html to syllabus.html

--- a/syllabus.html
+++ b/syllabus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CertifiedFluency Recommended E-Books
+        <title>CertifiedFluency|Core Competencies Syllabus
         </title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
