--- a/home.html
+++ b/home.html
@@ -33,13 +33,11 @@
                         <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="
-                                        s.html">Core Competencies Syllabus</a></li>
+                                    <li><a href="syllabus.html">Core Competencies Syllabus</a></li>
                                     <li><a href="electronics.html">Online Certifications</a></li>
-                                    <li><a href="toysAndKids.html">E-Books</a></li>
-                                    <li><a href="#">Additional Resources</a></li>
-                                    <li><a href="computersAndLaptops.html">Sign up to receive ocasional, non-invasive reminders. </a></li>
-                                    <li><a href="homeEssentials.html">Product Reviews</a></li>
+                                    <li><a href="eliterature.html">E-Books</a></li>
+                                    <li><a href="resources.html">Resources</a></li>
+                                    <li><a href="productreviews.html">Product Reviews. </a></li>
                                 </ul>
                         </li>
                 </div>
@@ -47,10 +45,10 @@
               
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="books.html">Core Competencies Syllabus</a></li>
-                <li><a href="electronics.html">Online Certifications</a></li>
-                <li><a href="technology.html" >Technology</a></li>
+                <li><a href="home.html">The CertifiedFluency Methodology</a></li>
+                <li><a href="syllabus.html">Master Syllabus</a></li>
+                <li><a href="onlinecertification.html">Online Certifications</a></li>
+                <li><a href="resources.html" >Resources</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
                     <ul class="dropdown-menu shop">
