--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CertifiedFluency.com|Free Language Learning Resources, Courses, and Community.</title>
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="/webicon.png">
 
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
