--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CertifiedFluency.com|Free Language Learning Resources, Courses, and Community.</title>
-        <link rel="icon" href="/webicon.png">
+        <link rel="icon" href="/weblogo.png">
 
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
@@ -36,7 +36,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
                                     <li><a href="syllabus.html">Core Competencies Syllabus</a></li>
-                                    <li><a href="electronics.html">Online Certifications</a></li>
+                                    <li><a href="certifiations.html">Online Certifications</a></li>
                                     <li><a href="eliterature.html">E-Books</a></li>
                                     <li><a href="resources.html">Resources</a></li>
                                     <li><a href="productreviews.html">Product Reviews. </a></li>
