--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
                 <span class="icon-bar"></span>
 
       			</button>
-
-      			<a class="navbar-brand active" href="#">Brand</a>
+                  <img class="navbar-brand active" href="#" src="/WebLogo.png" alt="Chania">
+      			!<!--<a class="navbar-brand active" href="#">Brand</a> -->
       			
       			<div class="navbar-header down">
                         <li class="dropdown">
