--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
 
       			</button>
-                  <img class="navbar-brand active" href="#" src="/WebLogo.png" alt="Chania">
+                  <img class="navbar-brand active" href="/WebLogo.png" src="/WebLogo.png" alt="Chania">
       			!<!--<a class="navbar-brand active" href="#">Brand</a> -->
       			
       			<div class="navbar-header down">
