--- a/online-certifications.html
+++ b/online-certifications.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CertifiedFluency.com|Free Language Learning Resources, Courses, and Community.</title>
+        <title>CertifiedFluency.com - la mejor manera de aprender español.
+        </title>
         <link rel="icon" href="/weblogo.png">
 
         <link rel="stylesheet" href="css/style.css" type="text/css">
