--- a/core-competencies-syllabus.html
+++ b/core-competencies-syllabus.html
@@ -27,17 +27,16 @@
       			<a class="navbar-brand active" href="#">CertifiedFluency™</a>
       			
       			<div class="navbar-header down">
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Shop By Category<span class="caret"></span></a>
-                                <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">CertifiedFluency Recommended E-Books</a></li>
-                                    <li><a href="electronics.html">CertifiedFluency / Duolingo Complementary Curriculum</a></li>
-                                    <li><a href="toysAndKids.html">Resources</a></li>
-                                    <li><a href="computersAndLaptops.html">Featured Content Yes Boy</a></li>
-                                    <li><a href="#">Computers and Laptops</a></li>
-                                    <li><a href="homeEssentials.html">Home Essentials</a></li>
-                                </ul>
-                        </li>
+                    <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
+                            <ul class="dropdown-menu shop">
+                                <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                                <li><a href="online-certifiations.html">Online Certifications</a></li>
+                                <li><a href="eliterature.html">E-Books</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="product-reviews.html">Product Reviews. </a></li>
+                            </ul>
+                    </li>
                 </div>
     		</div>
             <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
