--- a/eliterature.html
+++ b/eliterature.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Affiliate Webpage</title>
+        <title>CertifiedFluency.com - la mejor manera de aprender español.
+        </title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -27,34 +28,33 @@
       			<a class="navbar-brand active" href="#">Brand</a>
       			
       			<div class="navbar-header down">
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Shop By Category<span class="caret"></span></a>
-                                <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">Books</a></li>
-                                    <li><a href="electronics.html">Electronics</a></li>
-                                    <li><a href="toysAndkids.html">Toys and Kids Section</a></li>
-                                    <li><a href="#">Cameras ans Accesories</a></li>
-                                    <li><a href="computersAndLaptops.html">Computers and Laptops</a></li>
-                                    <li><a href="homeEssentials.html">Home Essentials</a></li>
-                                </ul>
-                        </li>
+                    <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
+                            <ul class="dropdown-menu shop">
+                                <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                                <li><a href="online-certifiations.html">Online Certifications</a></li>
+                                <li><a href="eliterature.html">E-Books</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="product-reviews.html">Product Reviews. </a></li>
+                            </ul>
+                    </li>
                 </div>
     		</div>
                <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="books.html">Books</a></li>
-                    <li><a href="electronics.html">Electronics</a></li>
-                    <li><a href="#" >Technology</a></li>
+                    <li><a href="home.html">CertifiedFluency Methodology</a></li>
+                    <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                    <li><a href="eliterature.html">E-Books</a></li>
+                    <li><a href="resources.html" >Resources</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
                         <ul class="dropdown-menu shop">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another Action</a></li>
+                            <li><a href="#">Our Mission</a></li>
+                            <li><a href="#">Subscribe</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Careers</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Separeted link</a></li>
-                            <li><a href="#">Another Separeatd link</a></li>
+                            <li><a href="#">CertifiedSpanish.com</a></li>
+                            <li><a href="#">Fulton Media</a></li>
                         </ul>
                      </li>
                 </ul>
