--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CertifiedFluency.com|Free Language Learning Resources, Courses, and Community.</title>
+        <title>CertifiedFluency.com - la mejor manera de aprender español.           
+        </title>
         <link rel="icon" href="/weblogo.png">
-
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -35,11 +35,11 @@
                         <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="syllabus.html">Core Competencies Syllabus</a></li>
-                                    <li><a href="certifiations.html">Online Certifications</a></li>
+                                    <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                                    <li><a href="online-certifiations.html">Online Certifications</a></li>
                                     <li><a href="eliterature.html">E-Books</a></li>
                                     <li><a href="resources.html">Resources</a></li>
-                                    <li><a href="productreviews.html">Product Reviews. </a></li>
+                                    <li><a href="product-reviews.html">Product Reviews. </a></li>
                                 </ul>
                         </li>
                 </div>
@@ -47,7 +47,7 @@
               
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                <li><a href="home.html">The CertifiedFluency Methodology</a></li>
+                <li><a href="home.html">CertifiedFluency Methodology</a></li>
                 <li><a href="syllabus.html">Master Syllabus</a></li>
                 <li><a href="onlinecertification.html">Online Certifications</a></li>
                 <li><a href="resources.html" >Resources</a></li>
