--- a/eliterature.html
+++ b/eliterature.html
@@ -42,7 +42,7 @@
     		</div>
                <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
                     <li><a href="home.html">CertifiedFluency Methodology</a></li>
-                    <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                    <li><a href="core-competencies-syllabus.html">Syllabus</a></li>
                     <li><a href="eliterature.html">E-Books</a></li>
                     <li><a href="resources.html" >Resources</a></li>
                     <li class="dropdown">
