--- a/online-certifications.html
+++ b/online-certifications.html
@@ -36,11 +36,11 @@
                         <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
                                 <ul class="dropdown-menu shop">
-                                    <li><a href="syllabus.html">Core Competencies Syllabus</a></li>
-                                    <li><a href="certifiations.html">Online Certifications</a></li>
+                                    <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                                    <li><a href="online-certifications.html">Online Certifications</a></li>
                                     <li><a href="eliterature.html">E-Books</a></li>
                                     <li><a href="resources.html">Resources</a></li>
-                                    <li><a href="productreviews.html">Product Reviews. </a></li>
+                                    <li><a href="product-reviews.html">Product Reviews. </a></li>
                                 </ul>
                         </li>
                 </div>
@@ -48,9 +48,9 @@
               
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                <li><a href="home.html">The CertifiedFluency Methodology</a></li>
-                <li><a href="syllabus.html">Master Syllabus</a></li>
-                <li><a href="onlinecertification.html">Online Certifications</a></li>
+                <li><a href="home.html">CertifiedFluency Methodology</a></li>
+                <li><a href="syllabus.html"> Syllabus</a></li>
+                <li><a href="online-certification.html">Online Certifications</a></li>
                 <li><a href="resources.html" >Resources</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
