--- a/home.html
+++ b/home.html
@@ -48,8 +48,8 @@
               
            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
                 <li><a href="home.html">CertifiedFluency Methodology</a></li>
-                <li><a href="syllabus.html">Master Syllabus</a></li>
-                <li><a href="onlinecertification.html">Online Certifications</a></li>
+                <li><a href="core-competencies-syllabus.html">Syllabus</a></li>
+                <li><a href="online-certifications.html">Online Certifications</a></li>
                 <li><a href="resources.html" >Resources</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
