--- a/product-reviews.html
+++ b/product-reviews.html
@@ -40,7 +40,7 @@
     		</div>
             <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
                 <li><a href="home.html">CertifiedFluency Methodology</a></li>
-                <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                <li><a href="core-competencies-syllabus.html">Syllabus</a></li>
                 <li><a href="online-certifications.html">Online Certifications</a></li>
                 <li><a href="resources.html" >Resources</a></li>
                 <li class="dropdown">
