--- a/resources.html
+++ b/resources.html
@@ -26,37 +26,37 @@
       			<a class="navbar-brand active" href="#">Brand</a>
       			
       			<div class="navbar-header down">
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Shop By Category<span class="caret"></span></a>
-                                <ul class="dropdown-menu shop">
-                                    <li><a href="books.html">Books</a></li>
-                                    <li><a href="electronics.html">Electronics</a></li>
-                                    <li><a href="toysAndKids.html">Toys and Kids Section</a></li>
-                                    <li><a href="computersAndLaptops.html">Cameras ans Accesories</a></li>
-                                    <li><a href="#">Computers and Laptops</a></li>
-                                    <li><a href="homeEssentials.html">Home Essentials</a></li>
-                                </ul>
-                        </li>
-                </div>
-    		</div>
-               <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="books.html">Books</a></li>
-                    <li><a href="electronics.html">Electronics</a></li>
-                    <li><a href="#" >Technology</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
-                        <ul class="dropdown-menu shop">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another Action</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separeted link</a></li>
-                            <li><a href="#">Another Separeatd link</a></li>
-                        </ul>
-                     </li>
-                </ul>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Find<span class="caret"></span></a>
+                            <ul class="dropdown-menu shop">
+                                <li><a href="core-competencies-syllabus.html">Core Competencies Syllabus</a></li>
+                                <li><a href="online-certifiations.html">Online Certifications</a></li>
+                                <li><a href="eliterature.html">E-Books</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="product-reviews.html">Product Reviews. </a></li>
+                            </ul>
+                    </li>
+                </div>
+             </div>
+    		</div>
+            <ul class="collapsed collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
+                <li><a href="home.html">CertifiedFluency Methodology</a></li>
+                <li><a href="core-competencies-syllabus.html">Syllabus</a></li>
+                <li><a href="online-certifications.html">Online Certifications</a></li>
+                <li><a href="resources.html" >Resources</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Dropdown<span class="caret"></span></a>
+                    <ul class="dropdown-menu shop">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another Action</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separeted link</a></li>
+                        <li><a href="#">Another Separeatd link</a></li>
+                    </ul>
+                 </li>
+            </ul>
 
             </div>
         </nav>
