--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CertifiedFluency.com - la mejor manera de aprender español.           
+        <title>CertifiedFluency.com - ceritfy your language acquisition and enhance your resume.         
         </title>
-        <link rel="icon" href="/weblogo.png">
+        <link rel="icon" href="/WebLogo.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
 
       			</button>
-                  <img class="navbar-brand active" href="home.html" src="https://i.postimg.cc/3x3YdRzN/Full-Logo.png" alt="CertifiedFlueny.com">
+                  <img class="navbar-brand active" href="home.html" src="/WebLogo.png" alt="CertifiedFlueny.com">
       			<!--<a class="navbar-brand active" href="#">Brand</a> -->
       			
       			<div class="navbar-header down">
